--- a/DL4health EC.ipynb
+++ b/DL4health EC.ipynb
@@ -5,17 +5,40 @@
    "id": "911b92f7",
    "metadata": {},
    "source": [
-    "# Federated Boosted Decision Trees with Differential Privacy\n",
-    "### Maddock et al"
+    "# Federated Boosted Decision Trees with Differential Privacy"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0772d0b5",
+   "cell_type": "markdown",
+   "id": "cc44f53a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The authors explore the trade offs of different privacy preserving methods used implement Deferentially Private Gradient Boosted Decision Trees in a Distributed Setting \\cite{maddock_federated_2022}. Specifically, the authors define a general FL approach for GBDT as a framework with 5 core components that affect privacy. The authors then discuss a series of methods which could be used to implement each core component, and the associated contribution to the end goal of private, federated GBDT. The authors use the definition of Rényi Differential Privacy (RDP) \\cite{mironov_renyi_2017} to quantify the contributions of privacy across different configurations of the framework to produce theoretical guarantees on the degree of privacy of the end model. Finally, the authors analyze the trade offs of batching global parameter updates, the implications of different batch sizes. The authors conduct empirical evaluations of various configurations of the framework, batch size, and privacy budget,  assessing the trade offs between each parameter independently. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b28ce7c",
+   "metadata": {},
+   "source": [
+    "@inproceedings{Maddock_2022,\n",
+    "\tdoi = {10.1145/3548606.3560687},\n",
+    "  \n",
+    "\turl = {https://doi.org/10.1145%2F3548606.3560687},\n",
+    "  \n",
+    "\tyear = 2022,\n",
+    "\tmonth = {nov},\n",
+    "  \n",
+    "\tpublisher = {{ACM}\n",
+    "},\n",
+    "  \n",
+    "\tauthor = {Samuel Maddock and Graham Cormode and Tianhao Wang and Carsten Maple and Somesh Jha},\n",
+    "  \n",
+    "\ttitle = {Federated Boosted Decision Trees with Differential Privacy},\n",
+    "  \n",
+    "\tbooktitle = {Proceedings of the 2022 {ACM} {SIGSAC} Conference on Computer and Communications Security}\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
